--- a/WebSystem/Views/Account/Register.cshtml
+++ b/WebSystem/Views/Account/Register.cshtml
@@ -16,8 +16,8 @@
         <legend>注册表单</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
+                @Html.LabelFor(m => m.UserID)
+                @Html.TextBoxFor(m => m.UserID)
             </li>
             <li>
                 @Html.LabelFor(m => m.Password)
