--- a/WebSystem/Views/Shared/_LoginPartial.cshtml
+++ b/WebSystem/Views/Shared/_LoginPartial.cshtml
@@ -1,14 +1,15 @@
-﻿@if (Request.IsAuthenticated) {
-    <text>
-        你好，@Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "管理" })!
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" })) {
-            @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">注销</a>
-        }
-    </text>
-} else {
-    <ul>
-        <li>@Html.ActionLink("注册", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("登录", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+﻿@{
+    String sessString = WebSystem.Helpers.UserSecurityHelper.sessionName;
+    Object obj = Session[sessString];
+    if( null == obj ){
+        <ul>
+            <li>@Html.ActionLink("登录", "LoginPage", "User", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        </ul>
+    }else{
+        WebSystem.Models.SimpleUserModel user = (WebSystem.Models.SimpleUserModel)obj;
+        <text>
+            你好，@user.LogName (@user.UserID)
+            <a href="/User/Logoff">注销</a>
+        </text>  
+    } 
 }
