--- a/WebSystem/Views/Shared/_LoginPartial.cshtml
+++ b/WebSystem/Views/Shared/_LoginPartial.cshtml
@@ -1,15 +1,19 @@
 ﻿@{
     String sessString = WebSystem.Helpers.UserSecurityHelper.sessionName;
     Object obj = Session[sessString];
-    if( null == obj ){
+    if (null == obj)
+    {
         <ul>
             <li>@Html.ActionLink("登录", "LoginPage", "User", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
         </ul>
-    }else{
+    }
+    else
+    {
         WebSystem.Models.UserTableModel user = (WebSystem.Models.UserTableModel)obj;
         <text>
-            你好，@user.LogName (@user.UserID)
+            你好，@user.LogName (@user.RealName)
             <a href="/User/Logoff">注销</a>
-        </text>  
-    } 
+            <a href="/User/ModityUserPage">修改</a>
+        </text>    
+    }  
 }
