--- a/WebSystem/Views/User/ModityUserPage.cshtml
+++ b/WebSystem/Views/User/ModityUserPage.cshtml
@@ -14,13 +14,30 @@
      * 手机             CellPhone nvarchar(20） 是
      * 超级用户权限     AdminUser int             是
      */
+    <p>@ViewBag.message</p>
     <form method="POST" action="/User/ModifyUser">
-        <label>用户名</label><input type="text" value="" />
-        <label>密码</label><input type="password" name="Password" /><br /><br />
-        <label>新密码</label><input type="password" name="Newpassword" /><br /><br />
-        <label>确认密码</label><input type="password" name="ComfirmPassword" /><br /><br />
-        <label>邮箱</label><input type="text" name="Email" /><br /><br />
-        <label>手机</label><input type="text" name="CellPhone" /><br /><br />
+        <label>用户名</label><label>@ViewBag.LogName</label>
+        <label>真实姓名</label><input type="text" name="RealName" value="@ViewBag.RealName">
+        @{
+            if (null != @ViewBag.Error)
+            {
+                <label>密码</label><input type="password" name="Password" /><label>@ViewBag.Error.Password</label><br /><br />
+                <label>新密码</label><input type="password" name="NewPassword" /><label>@ViewBag.Error.NewPassword</label><br /><br />
+                <label>确认密码</label><input type="password" name="ConfirmPassword" /><label>@ViewBag.Error.ConfirmPassword</label><br /><br />
+                <label>邮箱</label><input type="text" name="Email" value="@ViewBag.Email" /><label>@ViewBag.Error.Email</label><br /><br />
+                <label>手机</label><input type="text" name="CellPhone" value="@ViewBag.CellPhone" /><label>@ViewBag.Error.CellPhone</label><br /><br />
+            }
+            else
+            {
+                <label>密码</label><input type="password" name="Password" /><br /><br />
+                <label>新密码</label><input type="password" name="NewPassword" /><br /><br />
+                <label>确认密码</label><input type="password" name="ComfirmPassword" /><br /><br />
+                <label>邮箱</label><input type="text" name="Email" value="@ViewBag.Email" /><br /><br />
+                <label>手机</label><input type="text" name="CellPhone" value="@ViewBag.CellPhone" /><br /><br />
+
+
+            }
+        }
         <input type="submit" value="确认修改" />
     </form>
 }
