--- a/WebSystem/Views/User/WebUserManager.cshtml
+++ b/WebSystem/Views/User/WebUserManager.cshtml
@@ -51,7 +51,7 @@
                 <td>@row["CellPhone"]</td>
                 <td>
                     <a href="/User/DeleteAccount/@row["UserID"]/@row["LogName"]">删除</a>&nbsp;&nbsp;
-                    <a href="/User/ModityUserPage">修改</a>
+                    <a href="/User/AdminModifyUserPage/@row["UserID"]">修改</a>
                 </td>
             </tr>
         }
