2017-1-23 the final package before New Year

--- a/AuxWebSystem/Views/Dataview/Index.cshtml
+++ b/AuxWebSystem/Views/Dataview/Index.cshtml
@@ -2,16 +2,8 @@
     ViewBag.Title = "数据查看";
 }
 
-<script type="text/javascript" src="~/Content/jquery/highcharts.js"></script>
-<script src="~/Content/jquery/exporting.js"></script>
-<script type="text/javascript" src="~/Content/jquery/data.js"></script>
-<script type="text/javascript" src='~/Content/jquery/moment.js'></script>
-<script type="text/javascript" src='~/Content/jquery/daterangepicker.js'></script>
-<link rel="stylesheet" type="text/css" href="~/Content/css/daterangepicker-bs3.css">
-
-<body>
-<div class='bg' style='margin-top: -19px;padding-top:2%;'>
-    <div class='text-center' style='width:80%;'>
+<div class='bg'>
+    <div class='text-center' style='width:80%;position:absolute;top:16%;'>
         <select>
             <option>试验台的电量统计</option>
             <option>设备利用率统计</option>
@@ -160,4 +152,3 @@
 
 
 </script>
-</body>
