--- a/AuxWebSystem/Views/Home/Index.cshtml
+++ b/AuxWebSystem/Views/Home/Index.cshtml
@@ -29,9 +29,8 @@
 
                 <div>
                     <label for="username">用户名:</label>
-                    <input type="text" name="LogName" id="username" placeholder="&nbsp;&nbsp;用户名" value="admin"/>
+                    <input type="text" name="LogName" id="username" placeholder="&nbsp;&nbsp;用户名" value="admin" />
                 </div>
-
 
                 <div>
                     <label for="password">密码:</label>
@@ -43,7 +42,7 @@
                 </div>
 
             </form>
-            <div id="message"></div>
+            <div id="message"><label style="text-align:center; color:red">@ViewBag.message</label></div>
         </div>
     </div>
 </body>
