--- a/AuxWebSystem/Views/shujuchakan.html
+++ b/AuxWebSystem/Views/shujuchakan.html
@@ -100,7 +100,7 @@
         <a href="shiyanxinxi.html#shiyanxinxi">试验台信息</a>
     	</li>
 		<li style='float:right;border-left:1px solid rgba(0,0,0,.3);'>
-			<a href="#" data-toggle="modal" data-target="#login">登录</a>
+			<a href="#" data-toggle="modal" data-target="#login">已登录</a>
 		</li>
 		
 	</ul>	
@@ -160,27 +160,27 @@
 				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>委托单有效率</th>
 			</thead>
 			<tr>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>区域一</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>试验台一</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>2017-01-01</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>2017-01-02</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>70%</td>
 
 			</tr>
 			<tr>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>区域一</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>试验台二</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>2017-01-01</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>2017-01-02</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>70%</td>
 				
 			</tr>
 			<tr>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>区域三</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>试验台一</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>2017-01-01</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>2017-01-02</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>70%</td>
 				
 			</tr>
 		</table>
