--- a/AuxWebSystem/Views/Shared/_Layout.cshtml
+++ b/AuxWebSystem/Views/Shared/_Layout.cshtml
@@ -1,16 +1,28 @@
 ﻿<!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
     <title>@ViewBag.Title</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
+    <link href="~/Content/css/showBo.css" rel="stylesheet" />
     <script type="text/javascript" src='~/Content/jquery/jquery-1.12.3.js'></script>
     <link rel="stylesheet" href="/Content/css/bootstrap.min.css">
     <script src="~/Content/jquery/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/Content/jquery/dataTables.min.js"></script>
+    <script type="text/javascript" src='~/Content/jquery/dataTables.min.js'></script>
     <link rel="stylesheet" type="text/css" href="~/Content/css/dataTables.min.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/css/daterangepicker-bs3.css">
-    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" type="text/css" charset="utf-8" />
+    <script src="~/Content/jquery/showBo.js"></script>
 
+    <script type="text/javascript" src="~/Content/jquery/highcharts.js"></script>
+    <script src="~/Content/jquery/exporting.js"></script>
+    <script type="text/javascript" src="~/Content/jquery/data.js"></script>
+
+
+    <script type="text/javascript" src='~/Content/jquery/moment.js'></script>
+    <script type="text/javascript" src='~/Content/jquery/daterangepicker.js'></script>
+    <link rel="stylesheet" type="text/css" href="~/Content/css/daterangepicker-bs3.css">
+    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" type="text/css"/>
+    <script type="text/javascript" src='~/Content/jquery/ajaxfrom.js'></script>
+    
+    
     <style type="text/css">
         * {
             margin: 0;
@@ -73,57 +85,66 @@
         .bg {
             background: url(/Images/bg.jpg)no-repeat;
             background-size: 100%;
-            height: 560px;
+            height: 570px;
         }
 
         .fenye a {
             color: black;
             background: #36608a;
         }
+        #add input {
+            width: 95px;
+        }
+        #addshiyantai input {
+            width: 90px;
     </style>
+
+
+
 </head>
 <body>
-    <header>
+        
         <ul id='daohanglan'>
             <li style='padding-left:10%;'></li>
-            <li style='border-bottom: 5px solid blue;'>
+            <li class="yonghuguanli">
                 <a name='yonghuguanli' href="/User/WebUserManager">Web用户管理</a>
             </li>
-            <li>
+            <li class="canshupeizhi">
                 <a href="#" class='canshu'>参数配置</a>
                 <div style='position:absolute;display:none;z-index: 1;' class='peizhi'>
-                    <div><a href="/Parameter/TimeParameter">标准实验</a></div>
+                    <div><a href="/Parameter/StandardParameter">标准实验</a></div>
                     <div><a href="/Parameter/Holiday">节假日设置</a></div>
                     <div><a href="/Parameter/SystemParameterSetting">系统参数设置</a></div>
                 </div>
             </li>
-            <li>
+            <li class="shujuchakan">
                 <a href="/Dataview/">数据查看</a>
             </li>
 
-            <li>
-                <a href="/LabInfo/">试验台信息</a>
+            <li class="shiyantaixinxi">
+                <a href="/Labinfo/">试验台信息</a>
             </li>
             <li style='float:right;border-left:1px solid rgba(0,0,0,.3);'>
                 <section>
                     @Html.Partial("_LoginPartial")
                 </section>
+
             </li>
         </ul>
-    </header>
-    <div>
+    
         <section>
             @RenderBody()
         </section>
-    </div>
-    <!--    
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - 我的 ASP.NET MVC 应用程序</p>
-                </div>
-            </div>
-        </footer>
-    -->
+        <script>
+            $(document).ready(function () {
+                $('.signal').bind('DOMNodeInserted', function (e) {
+                    if ($(e.target).text() == '标准实验') {
+                        alert('text');
+                    }
+                })
+            })
+           
+        </script>
+
 </body>
 </html>
