--- a/AuxWebSystem/Views/shiyanxinxi.html
+++ b/AuxWebSystem/Views/shiyanxinxi.html
@@ -100,7 +100,7 @@
         <a href="" name='shiyanxinxi'>试验台信息</a>
     	</li>
 		<li style='float:right;border-left:1px solid rgba(0,0,0,.3);'>
-			<a href="#">登录</a>
+			<a href="#">已登录</a>
 		</li>
 		
     </ul>	
@@ -114,32 +114,28 @@
 <div style='padding:4%;clear:both;' class='bg'>
 	<div style='position:absolute;font-size:24px;color:rgb(6,55,108);'><strong>试验台信息</strong></div>
  	<div style='width:80%;background:white;height:450px;margin:0 auto;padding-top:2%;'>
+ 		<div class='col-md-2' data-toggle='modal' data-target='#addshiyantai'><button style='margin-left:62%;' class='btn btn-info'>增加：</button></div>
+ 	</br></br>
 		<table class='table table-hover table-bordered table-condensed' style='width:80%;margin:0 auto;' id='shijiancanshu'>
 			<thead style='color:rgb(120,120,120);font-size:13px;'>
 				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>区域</th>
-				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>台号</th>
-				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>通道号</th>
 				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>台位</th>
-				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>更新时间</th>
-				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>电表通道</th>
 				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>性质</th>
-				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>状态</th>
-				<th bgcolor="#FFFFFF" style='text-align:center;background:rgb(246,246,246);'>备注</th>
+
 			</thead>
 			<tr>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
-				<td bgcolor="#FFFFFF" style='text-align:center;'>&nbsp;</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>区域一</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>台位1</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>稳定</td>
+			</tr>
+			<tr>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>区域一</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>台位1</td>
+				<td bgcolor="#FFFFFF" style='text-align:center;'>稳定</td>
 			</tr>
 		</table>
 </br></br>
-	<div style='width:80%;width: 80%;margin: 0 auto;' class='row'>
+	
 		<!-- <input placeholder='增加项目'/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		
 		<input type='time' class='span4'>
@@ -147,7 +143,7 @@
 		<input type='time' class='span4'>
 		<button class='btn btn-info' style='float:right;right:20%;border-radius: 5px;'>确定</button> -->
 
-		<div class='col-md-2' data-toggle='modal' data-target='#addshiyantai'><button>增加项目：</button></div>
+		
 		<!-- <div class='col-md-4'><input placeholder='请输入项目名称' name='xiangmumingchen'/></div>
 		<div class='col-md-4'><input placeholder='请输入项目时长' name='xiangmushichang'/>小时</div>
 		<div class='col-md-2'><button onclick='addRow()' class='btn btn-info'>确定</button></div> -->
@@ -175,7 +171,7 @@
 		</div>
 
 
-	</div>
+	
 </div>
 </div>
 
